Changed font sizes so that they work on IE11 and fixed broken link to non existant page.

--- a/vege-garden.css
+++ b/vege-garden.css
@@ -47,6 +47,11 @@ nav a
 	color: #FFF;
 }
 
+a
+{
+	border: none;
+}
+
 .active a
 {
 	background-color: #63956C;
@@ -102,6 +107,7 @@ section
 .group-heading h1
 {
 	margin: 0;
+	font-size: 24px;
 }
 
 p
